Update admin credentials in index.html

--- a/index.html
+++ b/index.html
@@ -623,8 +623,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
 <script>
   // ===== AUTH / USERS =====
-  const ADMIN_LOGIN = "admin";
-  const ADMIN_PASSWORD = "admin";
+  const ADMIN_LOGIN = "Fernando";
+  const ADMIN_PASSWORD = "Fern@ndo9!";
 
   const LS_USERS = "usuarios_sistema_v1";
   const LS_SESSION = "sessao_usuario_v1";
